added email sending after reservation and fixed some code